fixed jumping on content when the “Token” panel is open/closed

--- a/website/app/styles/doc-components/tokens-list.scss
+++ b/website/app/styles/doc-components/tokens-list.scss
@@ -35,10 +35,9 @@
 
 .doc-tokens-list__preview {
   display: flex;
-  align-items: center;
-  align-self: stretch;
+  align-items: flex-start;
   justify-content: flex-start;
-  padding: 16px;
+  padding: 36px 16px 16px 16px; // the vertical padding is to optically align to the center the token preview when the panel is collapsed
   border: 1px solid var(--doc-color-gray-500);
   border-radius: 3px 3px 0 0;
 
